<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/email_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/password"
            android:hint="@string/pass_hint"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/or_text"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>