<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <ProgressBar
        android:id="@+id/Create_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/acct_email_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_acct"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content" />


        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/password_account"
            android:hint="@string/pass_hint"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Register2"
            android:text="@string/register"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





    </LinearLayout>

</LinearLayout>