<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/actor"
        android:text="@string/write_your_journey"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30sp" />

<RelativeLayout
    android:id="@+id/relativeLay2"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/gratefull"
            android:textSize="19sp" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
    
    <Button
        android:id="@+id/getStarted"
        android:text="@string/get_started"
        android:textColor="@android:color/holo_red_light"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>